[package]
name = "zclp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bitflags = "2.8.0"
byteorder = "1.5.0"
lazy_static = "1.5.0"
libc = "0.2.169"
once_cell = "1.20.2"
openssl = "0.10.69"
random = "0.14.0"
regex = "1.11.1"
sha3 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
